@@ -1,3 +1,9 @@
+2013-06-08  Araki Ken  <arakiken@users.sf.net>
+
+	* x_screen.c: x_window_set_selection_owner() is called after the
+	  selected region is decided in order not to let parcellite reset
+	  the selected region.
+
 2013-06-07  Araki Ken  <arakiken@users.sf.net>
 
 	* man/mlterm.1, doc/ja/README.ja, doc/ja/README.fb: Updated.
